--- a/alphamove.html
+++ b/alphamove.html
@@ -55,7 +55,7 @@
             crossorigin="anonymous"></script>
     <script>
       // Start with the standard position and White to move.
-      var initialFen = "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1";
+      var initialFen = "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR b KQkq - 0 1";
       var game = new Chess(initialFen);
 
       // Configure the board.
